generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  GERENTE_OPERACIONES_AEREAS
  JEFE_SEGURIDAD_AEREA
  ADC
  ESPECIALISTA_DOCUMENTAL
  OPERADOR_RPA
  AUDITOR
  VIEWER
}

enum RecordStatus {
  ACTIVE
  INACTIVE
}

enum PermissionStatus {
  DRAFT
  IN_REVIEW
  READY_FOR_SUBMISSION
  SUBMITTED
  AUTHORIZED
  OBSERVED
  REJECTED
  EXPIRED
  CLOSED
  CANCELLED
}

model User {
  id             String    @id @default(cuid())
  email          String    @unique
  fullName       String
  hashedPassword String?
  image          String?
  emailVerified  DateTime?
  role           Role      @default(VIEWER)
  active         Boolean   @default(true)
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt
  accounts       Account[]
  sessions       Session[]
  notifications  Notification[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model CostCenter {
  id          String       @id @default(cuid())
  code        String       @unique
  name        String
  description String?
  status      RecordStatus @default(ACTIVE)
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  deletedAt   DateTime?
  drones      Drone[]
  operators   Operator[]
  flightPlans FlightPlan[]
}

model Client {
  id           String       @id @default(cuid())
  code         String?      @unique
  name         String
  contactName  String?
  contactEmail String?
  notes        String?
  status       RecordStatus @default(ACTIVE)
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt
  deletedAt    DateTime?
  flightPlans  FlightPlan[]
}

model Drone {
  id              String       @id @default(cuid())
  code            String?      @unique
  serialNumber    String       @unique
  manufacturer    String?
  model           String
  notes           String?
  status          RecordStatus @default(ACTIVE)
  insuranceExpiry DateTime?
  costCenterId    String?
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt
  deletedAt       DateTime?
  costCenter      CostCenter?  @relation(fields: [costCenterId], references: [id])
  flightPlans     FlightPlan[]
}

model Operator {
  id            String       @id @default(cuid())
  code          String?      @unique
  fullName      String
  email         String?
  phone         String?
  licenseNumber String?
  licenseExpiry DateTime?
  notes         String?
  status        RecordStatus @default(ACTIVE)
  costCenterId  String?
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt
  deletedAt     DateTime?
  costCenter    CostCenter?  @relation(fields: [costCenterId], references: [id])
  flightPlans   FlightPlan[]
}

model FlightPlan {
  id               String           @id @default(cuid())
  code             String           @unique
  title            String
  operationDate    DateTime
  permissionStatus PermissionStatus @default(DRAFT)
  notes            String?
  geometryJson     Json?
  geometryType     String?
  dgacChecklist    Json?
  costCenterId     String
  clientId         String
  droneId          String
  operatorId       String
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  deletedAt        DateTime?
  costCenter       CostCenter       @relation(fields: [costCenterId], references: [id])
  client           Client           @relation(fields: [clientId], references: [id])
  drone            Drone            @relation(fields: [droneId], references: [id])
  operator         Operator         @relation(fields: [operatorId], references: [id])
  permissionEvents PermissionEvent[]
  documents        Document[]
  emailLogs        EmailLog[]
}

model PermissionEvent {
  id           String           @id @default(cuid())
  flightPlanId String
  eventType    String
  fromStatus   PermissionStatus?
  toStatus     PermissionStatus?
  description  String?
  metadata     Json?
  createdById  String?
  createdAt    DateTime         @default(now())
  deletedAt    DateTime?
  flightPlan   FlightPlan       @relation(fields: [flightPlanId], references: [id])
}

model Document {
  id           String     @id @default(cuid())
  flightPlanId String
  docType      String
  fileName     String
  filePath     String
  mimeType     String?
  fileSize     Int?
  notes        String?
  uploadedById String?
  createdAt    DateTime   @default(now())
  deletedAt    DateTime?
  flightPlan   FlightPlan @relation(fields: [flightPlanId], references: [id])
}

model Notification {
  id        String   @id @default(cuid())
  userId    String
  title     String
  message   String
  type      String
  read      Boolean  @default(false)
  link      String?
  createdAt DateTime @default(now())
  deletedAt DateTime?
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, read])
}

model EmailLog {
  id           String     @id @default(cuid())
  to           String
  subject      String
  body         String
  status       String     // "sent" | "failed" | "bounced"
  error        String?
  type         String     // "notification" | "permit" | "report"
  sentAt       DateTime   @default(now())
  flightPlanId String?
  flightPlan   FlightPlan? @relation(fields: [flightPlanId], references: [id])
  createdById  String?
  createdAt    DateTime   @default(now())

  @@index([status])
  @@index([sentAt])
}

model HelpDoc {
  id         String   @id @default(cuid())
  title      String
  slug       String
  category   String
  fileName   String
  storedName String
  mimeType   String
  size       Int
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  deletedAt  DateTime?
}
